TASK-307-7: Добавлен POCO класс, который заполняется настройками из appsettings.json + добавлена конечная точка в контроллере для книг, чтобы получить эти настройки.

--- a/BooksKepeer.WebAPI/appsettings.json
+++ b/BooksKepeer.WebAPI/appsettings.json
@@ -6,5 +6,11 @@
       "RequestTimingMiddleware": "Information"
     }
   },
-    "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "Version": "v1.0",
+    "Author": "Kirill Zhestkov",
+    "Type": "REST-API (CRUD)",
+    "Company": "Techcore"
   }
+}
