--- a/BooksKeeper.Application/BooksKeeper.Application.csproj
+++ b/BooksKeeper.Application/BooksKeeper.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BooksKeeper.Domain\BooksKeeper.Domain.csproj" />
+	<ProjectReference Include="..\BooksKeeper.Infrastructure\BooksKeeper.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
