TASK-311(Рефакторинг): Сделан отдельный репозиторий работающий с Dapper, чтобы в дальнейшем избежать мешанины. DTO ответа из репозитория перенесено в слой приложения.

--- a/BooksKeeper.Infrastructure/BooksKeeper.Infrastructure.csproj
+++ b/BooksKeeper.Infrastructure/BooksKeeper.Infrastructure.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BooksKeeper.Application\BooksKeeper.Application.csproj" />
     <ProjectReference Include="..\BooksKeeper.Domain\BooksKeeper.Domain.csproj" />
   </ItemGroup>
 
