TASK-311-1: Сделан сервис для кеша, с реализацией в репозитории. Добавлен в docker-compose Redis.

--- a/BooksKepeer.WebAPI/appsettings.json
+++ b/BooksKepeer.WebAPI/appsettings.json
@@ -15,5 +15,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=BooksKeeperDB;Username=postgres;Password=554034"
+  },
+  "Redis": {
+    "RedisConnectionString": "localhost:6379",
+    "InstanceName": "BooksKeeper:"
   }
 }
