--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   postgres:	
     image: postgres:16
     container_name: BooksKeeper-Db-Container
@@ -13,5 +14,16 @@ services:
       POSTGRES_PASSWORD: 554034
       POSTGRES_HOST_AUTH_METHOD: trust
 
+  redis:
+    image: redis:7-alpine
+    container_name: BooksKeeper-Redis-Container
+    restart: unless-stopped
+    command: redis-server --appendonly yes
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
 volumes:
   BooksKeeper-Db-Data:
+  redis-data:  
