TASK-311: MongoDB добавлено в docker-compose, добавлены настройки в appsettings, а также модифицирован метод расширения инфраструктуры (подключение клиента для MongoDB). В Domain создана сущность отзыва со своими типами исключений.

--- a/BooksKepeer.WebAPI/appsettings.json
+++ b/BooksKepeer.WebAPI/appsettings.json
@@ -19,5 +19,9 @@
   "Redis": {
     "RedisConnectionString": "localhost:6379",
     "InstanceName": "BooksKeeper:"
+  },
+  "Mongo": {
+    "MongoConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ProductReviewsDB"
   }
 }
