--- a/BooksKeeper.Domain/BooksKeeper.Domain.csproj
+++ b/BooksKeeper.Domain/BooksKeeper.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
   </ItemGroup>
 
