--- a/BooksKepeer.WebAPI/appsettings.json
+++ b/BooksKepeer.WebAPI/appsettings.json
@@ -23,5 +23,11 @@
   "Mongo": {
     "MongoConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ProductReviewsDB"
+  },
+  "JwtOptions": {
+    "Issuer": "BooksKeeper-Techcore",
+    "Audience": "BooksKeeperUser",
+    "ExpInMinutes": 60,
+    "Secret": "secretkey-111-secretkey-222-secretkey333-secretkey444"
   }
 }
