TASK-317: проведен рефакторинг. Добавлен новый WebAPI проект, который имитирует отдельный микросервис, для того, чтобы в дальнейшем обращаться к нему через HttpAuthorService по другому порту.

--- a/tests/BooksKeeper.E2ETests/BooksKeeper.E2ETests.csproj
+++ b/tests/BooksKeeper.E2ETests/BooksKeeper.E2ETests.csproj
@@ -22,7 +22,7 @@
     <ProjectReference Include="..\..\BooksKeeper.Application\BooksKeeper.Application.csproj" />
     <ProjectReference Include="..\..\BooksKeeper.Domain\BooksKeeper.Domain.csproj" />
     <ProjectReference Include="..\..\BooksKeeper.Infrastructure\BooksKeeper.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\BooksKepeer.WebAPI\BooksKepeer.WebAPI.csproj" />
+    <ProjectReference Include="..\..\BooksKepeer.WebAPI\BooksKepeer.Books.WebAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
