--- a/tests/BooksKeeper.IntegrationInMemoryDbTests/BooksKeeper.IntegrationInMemoryDbTests.csproj
+++ b/tests/BooksKeeper.IntegrationInMemoryDbTests/BooksKeeper.IntegrationInMemoryDbTests.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\BooksKeeper.Application\BooksKeeper.Application.csproj" />
     <ProjectReference Include="..\..\BooksKeeper.Infrastructure\BooksKeeper.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\BooksKepeer.WebAPI\BooksKepeer.WebAPI.csproj" />
+    <ProjectReference Include="..\..\BooksKepeer.WebAPI\BooksKepeer.Books.WebAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
