--- a/BooksKeeper.Application/BooksKeeper.Application.csproj
+++ b/BooksKeeper.Application/BooksKeeper.Application.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
