TASK-319-1: RabbitMQ добавлен в docker-compose с двумя портами, один для самого сервиса, другой для UI.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,20 @@ services:
     volumes:
       - mongo-data:/data/db
 
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    hostname: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: rabbit
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq/mnesia
+
 volumes:
   BooksKeeper-Db-Data:
   redis-data:
-  mongo-data:  
+  mongo-data:
+  rabbitmq-data: 
