TASK-319-2: Добавлен и настроен MassTransit.

--- a/BooksKepeer.WebAPI/appsettings.json
+++ b/BooksKepeer.WebAPI/appsettings.json
@@ -29,5 +29,9 @@
     "Audience": "BooksKeeperUser",
     "ExpInMinutes": 60,
     "Secret": "secretkey-111-secretkey-222-secretkey333-secretkey444"
+  },
+  "RabbitMqOptions": {
+    "Username": "admin",
+    "Password": "rabbit"
   }
 }
