TASK-319-4: Создан контроллер с POST методом, который публикует сообщение в exchange (метод publish(command)).

--- a/BooksKepeer.WebAPI/BooksKepeer.Books.WebAPI.csproj
+++ b/BooksKepeer.WebAPI/BooksKepeer.Books.WebAPI.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BooksKeeper.Application\BooksKeeper.Application.csproj" />
     <ProjectReference Include="..\BooksKeeper.Infrastructure\BooksKeeper.Infrastructure.csproj" />
+    <ProjectReference Include="..\Orders.Contracts\Orders.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
