TASK-319-5: Создан сервис, а в нем воркер, который слушает очередь, которая была автоматически создана MassTransit по имени команды (в новой версии постфикс Command удаляется).

--- a/BooksKeeper.Infrastructure/BooksKeeper.Infrastructure.csproj
+++ b/BooksKeeper.Infrastructure/BooksKeeper.Infrastructure.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BooksKeeper.Application\BooksKeeper.Application.csproj" />
     <ProjectReference Include="..\BooksKeeper.Domain\BooksKeeper.Domain.csproj" />
+    <ProjectReference Include="..\Orders.OrderWorkerService\Orders.OrderWorkerService.csproj" />
   </ItemGroup>
 
 </Project>
