TASK-319-9: Созданы два сервиса, которые обрабатывают одно событие.

--- a/BooksKeeper.Infrastructure/BooksKeeper.Infrastructure.csproj
+++ b/BooksKeeper.Infrastructure/BooksKeeper.Infrastructure.csproj
@@ -24,6 +24,8 @@
   <ItemGroup>
     <ProjectReference Include="..\BooksKeeper.Application\BooksKeeper.Application.csproj" />
     <ProjectReference Include="..\BooksKeeper.Domain\BooksKeeper.Domain.csproj" />
+    <ProjectReference Include="..\Orders.InventoryService\Orders.InventoryService.csproj" />
+    <ProjectReference Include="..\Orders.NotificationService\Orders.NotificationService.csproj" />
     <ProjectReference Include="..\Orders.OrderWorkerService\Orders.OrderWorkerService.csproj" />
   </ItemGroup>
 
